changed description field of modal to textarea

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   <div id="modal-overlay">
     <div id="modal">
       <label for="title">Title:</label>
-      <input type="text" id="title">
+      <input type="text" id="title" placeholder="Item 1">
       <br>
       <label for="dueDay">Day:</label>
       <select id="dueDay">
@@ -54,6 +54,9 @@
       <select id="dueYear">
         <option value="">Year</option>
       </select>
+      <br>
+      <label for="description">Description:</label>
+      <textarea id="description" placeholder="Description"></textarea>
       <br>
       <button id="saveButton">Save</button>
       <button id="markCompleteButton">Mark As Complete</button>
