renamed edit save button as 'Update'

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       <textarea id="description" placeholder="Description"></textarea>
       <br>
       <button id="new-saveButton">Save</button>
-      <button id="edit-saveButton">Saved</button>
+      <button id="edit-saveButton">Update</button>
       <button id="markCompleteButton">Mark As Complete</button>
       <button id="cancelButton">Cancel</button>
     </div>
